--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "sebas-ai-tech-lab",
+  "homepage": "https://sebasquirogaucp.github.io/sebas-ai-tech-lab",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react-dom": "19.2.3",
-    "lucide-react": "0.562.0",
-    "recharts": "3.6.0",
-    "react-router-dom": "7.11.0",
-    "react": "19.2.3",
+    "@tensorflow/tfjs": "4.22.0",
     "@xenova/transformers": "2.17.2",
-    "tailwind-merge": "3.4.0",
     "clsx": "2.1.1",
-    "@tensorflow/tfjs": "4.22.0"
+    "lucide-react": "0.562.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-router-dom": "7.11.0",
+    "recharts": "3.6.0",
+    "tailwind-merge": "3.4.0"
   },
   "devDependencies": {
     "@types/node": "22.14.0",
     "@vitejs/plugin-react": "5.0.0",
+    "gh-pages": "^6.3.0",
     "typescript": "~5.8.2",
     "vite": "6.2.0"
   }
